added img files; added html to index file

--- a/index.html
+++ b/index.html
@@ -4,27 +4,38 @@
 	<head>
 
 		<meta charset="utf-8">
-
-		<title>Backyard Dreams Farm</title>
-
-		<link type="text/css" rel="stylesheet" href="styles.css" />
-
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<title>Assignment 3 - Flexbox</title>
+
+		<!-- FAVicon -->
+		<link rel="shortcut icon" href="images/favicon.ico" type="img/ico"/>
+
+		<!-- CSS -->
+		<link type="text/css" rel="stylesheet" href="style.css" />
+
 
 		<!-- Google Font -->
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
 
+		<!-- Adobe Fonts -->
+		<link href="https://use.typekit.net/btq3jcm.css" rel="stylesheet">
+		<link rel="stylesheet" href="https://use.typekit.net/zkp1nes.css">
+
 		<!--[if lt IE 9]>
 			<script src="js/html5shiv-printshiv.min.js"></script>
 		<![endif]-->
+
+		<!-- Java Library -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 	</head>
 
 	<body class="site">
 
 		<header>
-			<h1>Backyard Dreams Farm</h1>
+			<h1>Beastie Boys</h1>
 
 			<nav>
 				<ul>
@@ -71,6 +82,8 @@
 
 				</article>
 			</section>
+
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/z5rRZdiu1UE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 		</main>
 
