--- a/index.html
+++ b/index.html
@@ -35,55 +35,106 @@
 	<body class="site">
 
 		<header>
-			<h1>Beastie Boys</h1>
 
-			<nav>
+			<!-- Hamburger Menu buttons -->
+			<button class="hamburger">&#9776;</button>
+  		<button class="cross">&#735;</button>
+
+			<!-- Hamburger Menu -->
+			<nav class="menu">
+			  <ul>
+			    <a href="#"><li>LINK ONE</li></a>
+			    <a href="#"><li>LINK TWO</li></a>
+			    <a href="#"><li>LINK THREE</li></a>
+			    <a href="#"><li>LINK FOUR</li></a>
+			    <a href="#"><li>LINK FIVE</li></a>
+			  </ul>
+			</nav>
+
+			<!-- Desktop Menu -->
+			<nav class="desktop-menu">
 				<ul>
 					<li><a href="#">Link 1</a></li>
 					<li><a href="#">Link 2</a></li>
 					<li><a href="#">Link 3</a></li>
-					<li><a href="#">Link 4</a></li>
-					<li><a href="#">Link 5</a></li>
+				</ul>
+
+				<ul>
+					<li><a href="#">Social 1</a></li>
+					<li><a href="#">Social 1</a></li>
+					<li><a href="#">Social 1</a></li>
 				</ul>
 			</nav>
 
+			<div class="hero">
+				<img src="images/bboy-hero.jpeg" alt="image of the beastie boys jumping behind a boombox taken from the ground's perspective looking up" title="B-Boys">
+				<h1>Beastie Boys</h1>
+			</div>
 		</header>
 
 		<main class="site-content">
+			<article class="overview">
+				<h2>Place holder text</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</article>
 
-			<section class="image-grid">
-				<figure><img src="#" alt="Image 1"/></figure>
-				<figure><img src="#" alt="Image 2"/></figure>
-				<figure><img src="#" alt="Image 3"/></figure>
-				<figure><img src="#" alt="Image 4"/></figure>
-				<figure><img src="#" alt="Image 5"/></figure>
-				<figure><img src="#" alt="Image 6"/></figure>
-				<figure><img src="#" alt="Image 7"/></figure>
-				<figure><img src="#" alt="Image 8"/></figure>
-				<figure><img src="#" alt="Image 9"/></figure>
-				<figure><img src="#" alt="Image 10"/></figure>
-				<figure><img src="#" alt="Image 11"/></figure>
-				<figure><img src="#" alt="Image 12"/></figure>
+			<section class="section-break">
+				<img src="images/beastie-puma.jpeg" alt="image of the Beastie Boys wearing red and black tracksuits and their D.J. holding a boombox next to a building in New York City" title="Solid Gold Hits!">
+			</section>
 
+			<article class="ad-rock">
+				<figure>
+					<img src="images/bboys-adrock.jpeg" alt="image of the Beastie Boys outside of a pizza restaurant with Ad-Rock in the foreground" title="Adam Harovitz">
+					<figcaption>Photo pulled from Popwell.net</figcaption>
+				</figure>
+				<h2>Adam "King Ad-Rock" Horowitz</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</article>
+
+			<article class="mc-a">
+				<figure>
+					<img src="images/bboys-palmtree.png" alt="image of the Beastie Boys outside with Adam Yauch in the foreground. The sky is blue and a green palm borders the right of the image" title="Adam Yauch">
+					<figcaption>Photo pulled from NorthernExpress.com</figcaption>
+				</figure>
+				<h2>Adam "MC A" Yauch</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</article>
+
+			<article class="mike-d">
+				<figure>
+					<img src="images/bboys-mike-d2.jpeg" alt="image of the Beastie Boys against a blue background" title="Michael Diamond">
+					<figcaption>Photo pulled from HappyMag.tv</figcaption>
+				</figure>
+				<h2>Mike "D" Diamond</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</article>
+
+			<aside class="sidebar">
+				<ul>
+					<li><a href="#"><img src="images/bboy-silouette-a" alt="Silouette of Adam Yauch" title="MC A"/></a></li>
+					<li><a href="#"><img src="images/bboy-silouette-b" alt="Silouette of Mike Diamond" title="Mike D"/></a></li>
+					<li><a href="#"><img src="images/bboy-silouette-c" alt="Silouette of Adam Horowitz" title="Ad Rock"/></a></li>
+				</ul>
+			</aside>
+
+			<section class="section-break">
+				<img src="images/bboys-story.jpeg" alt="image of the Beastie Boys...two are sitting on a skateboard as MC A jumps over. Image is taken from a lower perspective and looking up at the Beastie Boys" title="If its going to be that kind of party...">
 			</section>
 
 			<section>
-				<article class="first">
-					<h2>First Article Title</h2>
-					<p>This is my first article about stuff. This is my first article about stuff. This is my first article about stuff. This is my first article about stuff. This is my first article about stuff.
-					</p>
-
-				</article>
-
-				<article class="second">
-					<h2>Second Article Title</h2>
-					<p>This is my first article about stuff. This is my first article about stuff. This is my first article about stuff. This is my first article about stuff. This is my first article about stuff.
-					</p>
-
-				</article>
+				<h2>Albums</h2>
+				<img src="images/license-ill-cover.jpeg" alt="License to Ill album cover front" title="License to Ill">
+				<img src="images/pauls-boutique-cover.jpeg" alt="Paul's Boutique album cover front" title="Paul's Boutique">
+				<img src="images/check-head-cover.jpeg" alt="Check Your Head album cover front" title="Check Your Head">
+				<img src="images/ill-communication-cover.jpeg" alt="Ill Communications album cover front" title="Ill Communications">
+				<img src="images/hellonasty-cover.jpeg" alt="Hello Nasty album cover front" title="Hello Nasty">
+				<img src="images/boroughs-cover.jpeg" alt="To The 5 Boroughs album cover front" title="To The 5 Boroughs">
 			</section>
 
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/z5rRZdiu1UE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<div class="video">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/z5rRZdiu1UE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
+
 
 		</main>
 
