formatted images and inserted text for headings and body type

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
 		<header>
 
+			<img src="images/bboy-logo.png" alt="Beastie Boys Logo from Sabotage" title="The Beastie Boys">
+
 			<!-- Hamburger Menu buttons -->
 			<button class="hamburger">&#9776;</button>
   		<button class="cross">&#735;</button>
@@ -74,8 +76,8 @@
 
 		<main class="site-content">
 			<article class="overview">
-				<h2>Place holder text</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<h2>Now here's a little story I've got to tell about three bad brothers you know so well...</h2>
+				<p>...a trio of goofy teenagers were able to run wild through a city in seedy decline. Coming of age just as punk rock and hip-hop blossomed in the city, the Beasties fell in love with the musical chaos and heady energy that was swirling all around them. They were able to tap into that energy and draw inspiration from it for the remainder of their careers, as their fond recollections of the time and place make clear. They don’t sugar-coat it, though, and every story of hanging out on the third floor of Danceteria is tempered by one about hordes of rats swarming from their apartment trash cans.</p>
 			</article>
 
 			<section class="section-break">
@@ -84,36 +86,48 @@
 
 			<article class="ad-rock">
 				<figure>
-					<img src="images/bboys-adrock.jpeg" alt="image of the Beastie Boys outside of a pizza restaurant with Ad-Rock in the foreground" title="Adam Harovitz">
+					<img src="images/bboys-adrock.jpg" alt="image of the Beastie Boys outside of a pizza restaurant with Ad-Rock in the foreground" title="Adam Harovitz">
 					<figcaption>Photo pulled from Popwell.net</figcaption>
 				</figure>
 				<h2>Adam "King Ad-Rock" Horowitz</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>Adam Keefe Horovitz, better known by Ad-Rock or King Ad-Rock, was born on October 31st, 1966. Horovitz began his career in music with the punk rock band, The Young and the Useless. The band would often perform alongside the Beastie Boys, who was also a punk rock band at the time. When guitarist for the Beastie Boys, John Berry, quit, Horovitz joined the Beastie Boys in 1982 at age 16. Shortly after his induction into the group, they changed their sound from punk rock to hip hop.
+					<blockquote cite="https://genius.com/Beastie-boys-pau-revere-lyrics">
+						<p>The King Ad-Rock, that is my name | and I know the fly spot where they got the champagne</p>
+					</blockquote>
+				</p>
 			</article>
 
 			<article class="mc-a">
 				<figure>
-					<img src="images/bboys-palmtree.png" alt="image of the Beastie Boys outside with Adam Yauch in the foreground. The sky is blue and a green palm borders the right of the image" title="Adam Yauch">
+					<img src="images/bboys-palmtree.jpg" alt="image of the Beastie Boys outside with Adam Yauch in the foreground. The sky is blue and a green palm borders the right of the image" title="Adam Yauch">
 					<figcaption>Photo pulled from NorthernExpress.com</figcaption>
 				</figure>
 				<h2>Adam "MC A" Yauch</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>Adam Yauch, or MC A, was born on August 5th, 1964 and died of cancer in 2012. Yauch founded the hip hop group, Beastie Boys in New York City. He directed many of the Beastie Boys' music videos, often under the pseudonym Nathaniel Hornblower. Yauch became a practicing Buddhist and was a champion for the <em>Tibetan independence movement</em>. A leader in spreading equality, MC A rapped the verse:
+					<blockquote cite="https://en.wikipedia.org/wiki/Adam_Yauch">
+						<p class="quote">I want to say something that's long overdue | The disrespect to women has got to be through | To all the mothers and sisters and wives and friends | I want to offer my love and respect till the end.</p>
+					</blockquote>
+				</p>
 			</article>
 
 			<article class="mike-d">
 				<figure>
-					<img src="images/bboys-mike-d2.jpeg" alt="image of the Beastie Boys against a blue background" title="Michael Diamond">
+					<img src="images/bboys-mike-d2.jpg" alt="image of the Beastie Boys against a blue background" title="Michael Diamond">
 					<figcaption>Photo pulled from HappyMag.tv</figcaption>
 				</figure>
 				<h2>Mike "D" Diamond</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>Michael Diamond, known as Mike D, was born on November 20th, 1965 in New York City. Mike D formed the Beastie Boys with Adam Yauch in 1981, soon adding Adam Horovitz to the group. They started out as a punk band, but they found their calling with hip-hop music. In 1985, they opened for Madonna on her famous "Like a Virgin" tour. The Beastie Boys gained huge success with numerous albums and tours, then later founded their own record label and magazine called Grand Royal in 1993. Mike often plays the drums for Beastie Boys songs when they are not performing with a DJ.
+					<blockquote cite="https://genius.com/Beastie-boys-pau-revere-lyrics">
+						<p>I'm Mike D and I get respect. Your cash and your jewelry is what I expect.</p>
+					</blockquote>
+				</p>
 			</article>
 
 			<aside class="sidebar">
 				<ul>
-					<li><a href="#"><img src="images/bboy-silouette-a" alt="Silouette of Adam Yauch" title="MC A"/></a></li>
-					<li><a href="#"><img src="images/bboy-silouette-b" alt="Silouette of Mike Diamond" title="Mike D"/></a></li>
-					<li><a href="#"><img src="images/bboy-silouette-c" alt="Silouette of Adam Horowitz" title="Ad Rock"/></a></li>
+					<li><a href="#"><img src="images/bboy-adrock.png" alt="Silouette of Adam Horowitz" title="Adam Horowitz"/></a></li>
+					<li><a href="#"><img src="images/bboy-mike.png" alt="Silouette of Mike Diamond" title="Mike Diamond"/></a></li>
+					<li><a href="#"><img src="images/bboy-yauch.png" alt="Silouette of Adam Yauch" title="Adam Yauch"/></a></li>
 				</ul>
 			</aside>
 
@@ -128,13 +142,12 @@
 				<img src="images/check-head-cover.jpeg" alt="Check Your Head album cover front" title="Check Your Head">
 				<img src="images/ill-communication-cover.jpeg" alt="Ill Communications album cover front" title="Ill Communications">
 				<img src="images/hellonasty-cover.jpeg" alt="Hello Nasty album cover front" title="Hello Nasty">
-				<img src="images/boroughs-cover.jpeg" alt="To The 5 Boroughs album cover front" title="To The 5 Boroughs">
+				<img src="images/boroughs-cover.png" alt="To The 5 Boroughs album cover front" title="To The 5 Boroughs">
 			</section>
 
 			<div class="video">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/z5rRZdiu1UE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/qORYO0atB6g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
-
 
 		</main>
 
