--- a/index.html
+++ b/index.html
@@ -149,6 +149,11 @@
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/qORYO0atB6g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 
+			<section>
+				<a href="#"><img src="images/boombox.png" alt="image of 1980s style boombox" title="Take me to the TOP!!"</a>
+				<h4>Top</h4>
+			</section>
+
 		</main>
 
 		<footer>
