--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="shortcut icon" href="images/favicon.ico" type="img/ico"/>
 
 		<!-- CSS -->
-		<link type="text/css" rel="stylesheet" href="style.css" />
+		<link type="text/css" rel="stylesheet" href="css/style.css" />
 
 		<!-- FontAwesome -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
