styled images; began styling nav

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 			  </ul>
 			</nav>
 
-			<!-- Desktop Menu -->
-			<nav class="desktop-menu">
+			<!-- Desktop Nav Menu -->
+			<nav class="desktop-nav">
 				<ul>
 					<div class="dropdown-nav">
 						<button class="drop-btn" type="button" name="button">About</button>
