--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 				<h2>Adam "King Ad-Rock" Horowitz</h2>
 				<p>Adam Keefe Horovitz, better known by Ad-Rock or King Ad-Rock, was born on October 31st, 1966. Horovitz began his career in music with the punk rock band, The Young and the Useless. The band would often perform alongside the Beastie Boys, who was also a punk rock band at the time. When guitarist for the Beastie Boys, John Berry, quit, Horovitz joined the Beastie Boys in 1982 at age 16. Shortly after his induction into the group, they changed their sound from punk rock to hip hop.
 					<blockquote cite="https://genius.com/Beastie-boys-pau-revere-lyrics">
-						<p>The King Ad-Rock, that is my name | and I know the fly spot where they got the champagne</p>
+						<p>The King Ad-Rock, that is my name, and I know the fly spot where they got the champagne</p>
 					</blockquote>
 				</p>
 			</article>
@@ -123,7 +123,7 @@
 				<h2>Adam "MC A" Yauch</h2>
 				<p>Adam Yauch, or MC A, was born on August 5th, 1964 and died of cancer in 2012. Yauch founded the hip hop group, Beastie Boys in New York City. He directed many of the Beastie Boys' music videos, often under the pseudonym Nathaniel Hornblower. Yauch became a practicing Buddhist and was a champion for the <em>Tibetan independence movement</em>. A leader in spreading equality, MC A rapped the verse:
 					<blockquote cite="https://en.wikipedia.org/wiki/Adam_Yauch">
-						<p class="quote">I want to say something that's long overdue | The disrespect to women has got to be through | To all the mothers and sisters and wives and friends | I want to offer my love and respect till the end.</p>
+						<p class="quote">I want to say something that's long overdue: The disrespect to women has got to be through: To all the mothers and sisters and wives and friends: I want to offer my love and respect till the end.</p>
 					</blockquote>
 				</p>
 			</article>
@@ -157,16 +157,94 @@
 				<img src="images/bboys-story.jpeg" alt="image of the Beastie Boys...two are sitting on a skateboard as MC A jumps over. Image is taken from a lower perspective and looking up at the Beastie Boys" title="If its going to be that kind of party...">
 			</section>
 
-			<hr />
 
 			<section class="albums" id="albums">
 				<h2>Albums</h2>
-				<img class="sm" src="images/license-ill-cover.jpeg" alt="License to Ill album cover front" title="License to Ill">
-				<img class="sm" src="images/pauls-boutique-cover.jpeg" alt="Paul's Boutique album cover front" title="Paul's Boutique">
-				<img class="sm" src="images/check-head-cover.jpeg" alt="Check Your Head album cover front" title="Check Your Head">
-				<img class="sm" src="images/ill-communication-cover.jpeg" alt="Ill Communications album cover front" title="Ill Communications">
-				<img class="sm" src="images/hellonasty-cover.jpeg" alt="Hello Nasty album cover front" title="Hello Nasty">
-				<img class="sm" src="images/boroughs-cover.png" alt="To The 5 Boroughs album cover front" title="To The 5 Boroughs">
+
+			<!-- Flip Animation -->
+				<!-- License to Ill -->
+				<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+					<div class="flipper">
+						<div class="front">
+							<!-- Font Content -->
+							<img class="sm" src="images/license-ill-cover.jpeg" alt="License to Ill album cover front" title="License to Ill">
+						</div>
+						<div class="back">
+							<!-- back content -->
+							<img class="sm" src="images/licenseill-back.jpeg" alt="License to Ill album cover back" title="License to Ill">
+						</div>
+					</div>
+				</div>
+
+				<!-- Paul's Boutique -->
+				<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+					<div class="flipper">
+						<div class="front">
+							<!-- Font Content -->
+							<img class="sm" src="images/pauls-boutique-cover.jpeg" alt="Paul's Boutique album cover front" title="Paul's Boutique">
+						</div>
+						<div class="back">
+							<!-- back content -->
+							<img class="sm" src="images/pauls-boutique-cover.jpeg" alt="Paul's Boutique album cover front" title="Paul's Boutique">
+						</div>
+					</div>
+				</div>
+
+				<!-- Check Your Head -->
+				<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+					<div class="flipper">
+						<div class="front">
+							<!-- Font Content -->
+							<img class="sm" src="images/check-head-cover.jpeg" alt="Check Your Head album cover front" title="Check Your Head">
+						</div>
+						<div class="back">
+							<!-- back content -->
+							<img class="sm" src="images/check-head-back.jpeg" alt="Check Your Head album cover front" title="Check Your Head">
+						</div>
+					</div>
+				</div>
+
+				<!-- Ill Communications -->
+				<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+					<div class="flipper">
+						<div class="front">
+							<!-- Font Content -->
+							<img class="sm" src="images/ill-communication-cover.jpeg" alt="Ill Communications album cover front" title="Ill Communications">
+						</div>
+						<div class="back">
+							<!-- back content -->
+							<img class="sm" src="images/ill-comm-back.png" alt="Ill Communications album cover front" title="Ill Communications">
+						</div>
+					</div>
+				</div>
+
+				<!-- Hello Nasty -->
+				<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+					<div class="flipper">
+						<div class="front">
+							<!-- Font Content -->
+							<img class="sm" src="images/hellonasty-cover.jpeg" alt="Hello Nasty album cover front" title="Hello Nasty">
+						<div class="back">
+							<!-- back content -->
+							<img class="sm" src="images/hellonasty-back.jpeg" alt="Hello Nasty album cover front" title="Hello Nasty">
+						</div>
+					</div>
+				</div>
+
+				<!-- To the 5 Boroughs -->
+				<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+					<div class="flipper">
+						<div class="front">
+							<!-- Font Content -->
+							<img class="sm" src="images/boroughs-cover.png" alt="To The 5 Boroughs album cover front" title="To The 5 Boroughs">
+						</div>
+						<div class="back">
+							<!-- back content -->
+							<img class="sm" src="images/boroughs-back.png" alt="To The 5 Boroughs album cover front" title="To The 5 Boroughs">
+						</div>
+					</div>
+				</div>
+			<!-- Flip Animation End -->
 			</section>
 
 			<hr />
