--- a/index.html
+++ b/index.html
@@ -35,52 +35,52 @@
 	</head>
 
 	<body class="site">
-
 		<header id="top">
+			<div class="nav-bar">
+				<img class="logo" src="images/bboy-logo.png" alt="Beastie Boys Logo from Sabotage" title="The Beastie Boys">
 
-			<img class="logo" src="images/bboy-logo.png" alt="Beastie Boys Logo from Sabotage" title="The Beastie Boys">
+				<!-- Hamburger Menu buttons -->
+				<button class="hamburger">&#9776;</button>
+				<button class="cross">&#735;</button>
 
-			<!-- Hamburger Menu buttons -->
-			<button class="hamburger">&#9776;</button>
-  		<button class="cross">&#735;</button>
+				<!-- Hamburger Menu -->
+				<nav class="menu">
+					<ul>
+						<a href="#overview"><li>About</li></a>
+						<a href="#about"><li>Ad Rock</li></a>
+						<a href="#mca"><li>MC A</li></a>
+						<a href="#mike-d"><li>Mike D</li></a>
+						<a href="#albums"><li>Albums</li></a>
+					</ul>
+				</nav>
 
-			<!-- Hamburger Menu -->
-			<nav class="menu">
-			  <ul>
-			    <a href="#overview"><li>About</li></a>
-			    <a href="#about"><li>Ad Rock</li></a>
-			    <a href="#mca"><li>MC A</li></a>
-			    <a href="#mike-d"><li>Mike D</li></a>
-			    <a href="#albums"><li>Albums</li></a>
-			  </ul>
-			</nav>
-
-			<!-- Desktop Nav Menu -->
-			<nav class="desktop-nav">
-				<ul>
-					<div class="dropdown-nav">
-						<button class="drop-btn" type="button" name="button">About</button>
-						<div class="dropdown-content-nav">
-							<a href="#about">Ad Rock</a>
-							<a href="#mca">MCA</a>
-							<a href="#mike-d">Mike D</a>
+				<!-- Desktop Nav Menu -->
+				<nav class="desktop-nav">
+					<ul>
+						<div class="dropdown-nav">
+							<button class="drop-btn" type="button" name="button">About</button>
+							<div class="dropdown-content-nav">
+								<a href="#about">Ad Rock</a>
+								<a href="#mca">MCA</a>
+								<a href="#mike-d">Mike D</a>
+							</div>
 						</div>
-					</div>
-					<li><a href="#albums">Albums</a></li>
-					<li><a href="#vid">Music Video</a></li>
-				</ul>
+						<li><a href="#albums">Albums</a></li>
+						<li><a href="#vid">Music Video</a></li>
+					</ul>
 
-				<ul>
-					<li><a href="https://www.facebook.com/beastieboys" target="_blank">Facebook</a></li>
-					<li><a href="https://www.instagram.com/beastieboysstory/" target="_blank">Instagram</a></li>
-					<li><a href="https://twitter.com/beastieboys" target="_blank">Twitter</a></li>
-				</ul>
+					<ul>
+						<li><a href="https://www.facebook.com/beastieboys" target="_blank">Facebook</a></li>
+						<li><a href="https://www.instagram.com/beastieboysstory/" target="_blank">Instagram</a></li>
+						<li><a href="https://twitter.com/beastieboys" target="_blank">Twitter</a></li>
+					</ul>
 
-				<form class="search" action="index.html">
-					<input type="search" name="search" placeholder="Enter keyword..."/>
-					<input type="submit" value="search" />
-				</form>
-			</nav>
+					<form class="search" action="index.html">
+						<input type="search" name="search" placeholder="Enter keyword..."/>
+						<input type="submit" value="search" />
+					</form>
+				</nav>
+			</div>
 
 			<div class="hero">
 				<img src="images/bboy-hero.jpeg" alt="image of the beastie boys jumping behind a boombox taken from the ground's perspective looking up" title="B-Boys">
