edit ifram and created image for back to top link

--- a/index.html
+++ b/index.html
@@ -250,12 +250,11 @@
 			<hr />
 
 			<div class="video" id="vid">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/qORYO0atB6g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe src="https://www.youtube.com/embed/ru3gH27Fn6E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen target="_blank"></iframe>
 			</div>
 
-			<section>
-				<a href="#top"><img class="boombox" src="images/boombox.png" alt="image of 1980s style boombox" title="Take me to the TOP!!"/></a>
-				<h4>Top</h4>
+			<section class="boombox">
+				<a href="#top"><img src="images/top-link.png" alt="image of 1980s style boombox" title="Take me to the TOP!!" width="100"/></a>
 			</section>
 
 		</main>
