--- a/index.html
+++ b/index.html
@@ -260,15 +260,16 @@
 		</main>
 
 		<footer>
-
       <div class="social-media">
         <a href="https://www.instagram.com/beastieboysstory/" target="_blank"><i class="fa fa-instagram" style="font-size:40px;color:#fbad50"></i></a>
 
         <a href="https://www.facebook.com/beastieboys" target="_blank"><i class="fa fa-facebook-square" style="font-size:40px;color:#4267B2"></i></a>
       </div>
 
-			<p>&copy; Copyright 2021</p>
-			<p>Designed by <a href="mailto:jonathan.zehner28@gmail.com">Nomad Web Designs</a></p>
+			<div class="copyright">
+				<p>&copy; Copyright 2021</p>
+				<p>Designed by <a href="mailto:jonathan.zehner28@gmail.com">Nomad Web Designs</a></p>
+			</div>
 
 		</footer>
     <script src="lightbox/src/js/lightbox.js"></script>
