added 815 min-width media query with display flex

--- a/index.html
+++ b/index.html
@@ -97,63 +97,71 @@
 			<hr />
 
 			<section class="section-break">
+				<div class="video" id="vid">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/ru3gH27Fn6E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+
 				<img src="images/beastie-puma.jpeg" alt="image of the Beastie Boys wearing red and black tracksuits and their D.J. holding a boombox next to a building in New York City" title="Solid Gold Hits!">
 			</section>
 
-			<article class="ad-rock" id="about">
-				<figure>
-					<img class="med" src="images/bboys-adrock.jpg" alt="image of the Beastie Boys outside of a pizza restaurant with Ad-Rock in the foreground" title="Adam Harovitz">
-					<figcaption>Photo pulled from Popwell.net</figcaption>
-				</figure>
-				<h2>Adam "King Ad-Rock" Horowitz</h2>
-				<p>Adam Keefe Horovitz, better known by Ad-Rock or King Ad-Rock, was born on October 31st, 1966. Horovitz began his career in music with the punk rock band, The Young and the Useless. The band would often perform alongside the Beastie Boys, who was also a punk rock band at the time. When guitarist for the Beastie Boys, John Berry, quit, Horovitz joined the Beastie Boys in 1982 at age 16. Shortly after his induction into the group, they changed their sound from punk rock to hip hop.
-					<blockquote cite="https://genius.com/Beastie-boys-pau-revere-lyrics">
-						<p>The King Ad-Rock, that is my name, and I know the fly spot where they got the champagne</p>
-					</blockquote>
-				</p>
-			</article>
 
-			<hr />
+			<div class="art-aside">
+				<section>
+					<article class="ad-rock" id="about">
+						<figure>
+							<img class="med" src="images/bboys-adrock.jpg" alt="image of the Beastie Boys outside of a pizza restaurant with Ad-Rock in the foreground" title="Adam Harovitz">
+							<figcaption>Photo pulled from Popwell.net</figcaption>
+						</figure>
+						<h2>Adam "King Ad-Rock" Horowitz</h2>
+						<p>Adam Keefe Horovitz, better known by Ad-Rock or King Ad-Rock, was born on October 31st, 1966. Horovitz began his career in music with the punk rock band, The Young and the Useless. The band would often perform alongside the Beastie Boys, who was also a punk rock band at the time. When guitarist for the Beastie Boys, John Berry, quit, Horovitz joined the Beastie Boys in 1982 at age 16. Shortly after his induction into the group, they changed their sound from punk rock to hip hop.
+							<blockquote cite="https://genius.com/Beastie-boys-pau-revere-lyrics">
+								<p>The King Ad-Rock, that is my name, and I know the fly spot where they got the champagne</p>
+							</blockquote>
+						</p>
+					</article>
 
-			<article class="mca" id="mca">
-				<figure>
-					<img class="med" src="images/bboys-palmtree.jpg" alt="image of the Beastie Boys outside with Adam Yauch in the foreground. The sky is blue and a green palm borders the right of the image" title="Adam Yauch">
-					<figcaption>Photo pulled from NorthernExpress.com</figcaption>
-				</figure>
-				<h2>Adam "MC A" Yauch</h2>
-				<p>Adam Yauch, or MC A, was born on August 5th, 1964 and died of cancer in 2012. Yauch founded the hip hop group, Beastie Boys in New York City. He directed many of the Beastie Boys' music videos, often under the pseudonym Nathaniel Hornblower. Yauch became a practicing Buddhist and was a champion for the <em>Tibetan independence movement</em>. A leader in spreading equality, MC A rapped the verse:
-					<blockquote cite="https://en.wikipedia.org/wiki/Adam_Yauch">
-						<p class="quote">I want to say something that's long overdue: The disrespect to women has got to be through: To all the mothers and sisters and wives and friends: I want to offer my love and respect till the end.</p>
-					</blockquote>
-				</p>
-			</article>
+					<article class="mca" id="mca">
+						<figure>
+							<img class="med" src="images/bboys-palmtree.jpg" alt="image of the Beastie Boys outside with Adam Yauch in the foreground. The sky is blue and a green palm borders the right of the image" title="Adam Yauch">
+							<figcaption>Photo pulled from NorthernExpress.com</figcaption>
+						</figure>
+						<h2>Adam "MC A" Yauch</h2>
+						<p>Adam Yauch, or MC A, was born on August 5th, 1964 and died of cancer in 2012. Yauch founded the hip hop group, Beastie Boys in New York City. He directed many of the Beastie Boys' music videos, often under the pseudonym Nathaniel Hornblower. Yauch became a practicing Buddhist and was a champion for the <em>Tibetan independence movement</em>. A leader in spreading equality, MC A rapped the verse:
+							<blockquote cite="https://en.wikipedia.org/wiki/Adam_Yauch">
+								<p class="quote">I want to say something that's long overdue: The disrespect to women has got to be through: To all the mothers and sisters and wives and friends: I want to offer my love and respect till the end.</p>
+							</blockquote>
+						</p>
+					</article>
 
-			<hr />
+					<article class="mike-d" id="mike-d">
+						<figure>
+							<img class="med" src="images/bboys-mike-d2.jpg" alt="image of the Beastie Boys against a blue background" title="Michael Diamond">
+							<figcaption>Photo pulled from HappyMag.tv</figcaption>
+						</figure>
+						<h2>Mike "D" Diamond</h2>
+						<p>Michael Diamond, known as Mike D, was born on November 20th, 1965 in New York City. Mike D formed the Beastie Boys with Adam Yauch in 1981, soon adding Adam Horovitz to the group. They started out as a punk band, but they found their calling with hip-hop music. In 1985, they opened for Madonna on her famous "Like a Virgin" tour. The Beastie Boys gained huge success with numerous albums and tours, then later founded their own record label and magazine called Grand Royal in 1993. Mike often plays the drums for Beastie Boys songs when they are not performing with a DJ.
+							<blockquote cite="https://genius.com/Beastie-boys-pau-revere-lyrics">
+								<p>I'm Mike D and I get respect. Your cash and your jewelry is what I expect.</p>
+							</blockquote>
+						</p>
+					</article>
+				</section>
 
-			<article class="mike-d" id="mike-d">
-				<figure>
-					<img class="med" src="images/bboys-mike-d2.jpg" alt="image of the Beastie Boys against a blue background" title="Michael Diamond">
-					<figcaption>Photo pulled from HappyMag.tv</figcaption>
-				</figure>
-				<h2>Mike "D" Diamond</h2>
-				<p>Michael Diamond, known as Mike D, was born on November 20th, 1965 in New York City. Mike D formed the Beastie Boys with Adam Yauch in 1981, soon adding Adam Horovitz to the group. They started out as a punk band, but they found their calling with hip-hop music. In 1985, they opened for Madonna on her famous "Like a Virgin" tour. The Beastie Boys gained huge success with numerous albums and tours, then later founded their own record label and magazine called Grand Royal in 1993. Mike often plays the drums for Beastie Boys songs when they are not performing with a DJ.
-					<blockquote cite="https://genius.com/Beastie-boys-pau-revere-lyrics">
-						<p>I'm Mike D and I get respect. Your cash and your jewelry is what I expect.</p>
-					</blockquote>
-				</p>
-			</article>
+				<aside class="sidebar">
+					<ul>
+						<li><a href="#about"><img src="images/bboy-adrock.png" alt="Silouette of Adam Horowitz" title="Adam Horowitz"/><h4>Ad-Rock</h4></a></li>
+						<li><a href="#mike-d"><img src="images/bboy-mike.png" alt="Silouette of Mike Diamond" title="Mike Diamond"/><h4>Mike D</h4></a></li>
+						<li><a href="#mca"><img src="images/bboy-yauch.png" alt="Silouette of Adam Yauch" title="Adam Yauch"/><h4>MCA</h4></a></li>
+					</ul>
+				</aside>
+			</div>
 
-			<hr />
-
-			<aside class="sidebar">
-				<ul>
-					<li><a href="#about"><img src="images/bboy-adrock.png" alt="Silouette of Adam Horowitz" title="Adam Horowitz"/></a></li>
-					<li><a href="#mike-d"><img src="images/bboy-mike.png" alt="Silouette of Mike Diamond" title="Mike Diamond"/></a></li>
-					<li><a href="#mca"><img src="images/bboy-yauch.png" alt="Silouette of Adam Yauch" title="Adam Yauch"/></a></li>
-				</ul>
-			</aside>
 
 			<section class="section-break">
+				<div class="video" id="vid">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/ru3gH27Fn6E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+
 				<img src="images/bboys-story.jpeg" alt="image of the Beastie Boys...two are sitting on a skateboard as MC A jumps over. Image is taken from a lower perspective and looking up at the Beastie Boys" title="If its going to be that kind of party...">
 			</section>
 
@@ -247,10 +255,10 @@
 			<!-- Flip Animation End -->
 			</section>
 
-			<hr />
-
-			<div class="video" id="vid">
-				<iframe src="https://www.youtube.com/embed/ru3gH27Fn6E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen target="_blank"></iframe>
+			<div class="media">
+				<div class="audio">
+					<iframe src="https://open.spotify.com/embed/artist/03r4iKL2g2442PT9n2UKsx?theme=0" width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+				</div>
 			</div>
 
 			<section class="boombox">
