changed html structure for aesthetics: music playlist=aside; art-aside

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 				<p>...a trio of goofy teenagers were able to run wild through a city in seedy decline. Coming of age just as punk rock and hip-hop blossomed in the city, the Beasties fell in love with the musical chaos and heady energy that was swirling all around them. They were able to tap into that energy and draw inspiration from it for the remainder of their careers, as their fond recollections of the time and place make clear. They don’t sugar-coat it, though, and every story of hanging out on the third floor of Danceteria is tempered by one about hordes of rats swarming from their apartment trash cans.</p>
 			</article>
 
+
 			<hr />
 
 			<section class="section-break">
@@ -148,11 +149,36 @@
 				</section>
 
 				<aside class="sidebar">
-					<ul>
-						<li><a href="#about"><img src="images/bboy-adrock.png" alt="Silouette of Adam Horowitz" title="Adam Horowitz"/><h4>Ad-Rock</h4></a></li>
-						<li><a href="#mike-d"><img src="images/bboy-mike.png" alt="Silouette of Mike Diamond" title="Mike Diamond"/><h4>Mike D</h4></a></li>
-						<li><a href="#mca"><img src="images/bboy-yauch.png" alt="Silouette of Adam Yauch" title="Adam Yauch"/><h4>MCA</h4></a></li>
-					</ul>
+					<div class="three-beasties">
+						<ul>
+							<li class="adam-h">
+								<a href="#about"><img src="images/bboy-adrock.png" alt="Silouette of Adam Horowitz" title="Adam Horowitz"/>
+									<h4>Ad-Rock</h4>
+								</a>
+								<iframe src="https://open.spotify.com/embed/playlist/0sS7QPSXEZ3foYbvZUG16n" width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+							</li>
+
+							<li class="yauch">
+								<a href="#mca"><img src="images/bboy-yauch.png" alt="Silouette of Adam Yauch" title="Adam Yauch"/>
+									<h4>MCA</h4>
+								</a>
+								<iframe src="https://open.spotify.com/embed/playlist/5l6p3SkZoZF3blby0BZpH9" width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+							</li>
+
+							<li class="mike">
+								<a href="#mike-d"><img src="images/bboy-mike.png" alt="Silouette of Mike Diamond" title="Mike Diamond"/>
+									<h4>Mike D</h4>
+								</a>
+								<iframe src="https://open.spotify.com/embed/playlist/2JtObEFlZrGNukFmeQIzSq" width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+							</li>
+						</ul>
+					</div>
+
+					<!-- <div class="media">
+						<div class="audio">
+							<iframe src="https://open.spotify.com/embed/artist/03r4iKL2g2442PT9n2UKsx?theme=0" width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+						</div>
+					</div> -->
 				</aside>
 			</div>
 
@@ -255,11 +281,6 @@
 			<!-- Flip Animation End -->
 			</section>
 
-			<div class="media">
-				<div class="audio">
-					<iframe src="https://open.spotify.com/embed/artist/03r4iKL2g2442PT9n2UKsx?theme=0" width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-				</div>
-			</div>
 
 			<section class="boombox">
 				<a href="#top"><img src="images/top-link.png" alt="image of 1980s style boombox" title="Take me to the TOP!!" width="100"/></a>
